# devenv

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  detect.rs  docker.rs  main.rs  registry.rs  util.rs
src/docker/: file.rs  mod.rs
