[package]
name = "cargo-devenv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mustache = "0.9.0"
bollard = "0.19"
tokio = { version = "1.39", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "signal",
    "time",
] }
futures-util = "0.3"
tar = "0.4"
crossterm = "0.27"
bytes = "1"

[dev-dependencies]
tempfile = "3.10"
serial_test = "2.0"

[[bin]]
name = "devenv"
path = "src/main.rs"
