[package]
name = "cargo-devenv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bollard = "0.19"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
futures-util = "0.3"
mustache = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "signal",
    "time",
] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
serial_test = "3.2"

[[bin]]
name = "devenv"
path = "src/main.rs"
